updated:1.debug cpm，2.httpsystem，3cpm upload

--- a/UnitTestPro/UnitTestPro.csproj
+++ b/UnitTestPro/UnitTestPro.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="FuncTest\ReflectTest.cs" />
     <Compile Include="FuncTest\SysFuncTest.cs" />
+    <Compile Include="TestClass.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
