--- a/HmiPro/HmiPro.csproj
+++ b/HmiPro/HmiPro.csproj
@@ -86,6 +86,9 @@
     <Reference Include="Reducto, Version=0.9.5801.15538, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Reducto.0.9.4\lib\portable-net45+win+wp80+MonoAndroid10+Xamarin.iOS10+MonoTouch10\Reducto.dll</HintPath>
     </Reference>
+    <Reference Include="SimpleUpdater">
+      <HintPath>..\Libs\SimpleUpdater.dll</HintPath>
+    </Reference>
     <Reference Include="SQLite.CodeFirst, Version=1.4.0.20, Culture=neutral, PublicKeyToken=eb96ba0a78d831a7, processorArchitecture=MSIL">
       <HintPath>..\packages\SQLite.CodeFirst.1.4.0.20\lib\net45\SQLite.CodeFirst.dll</HintPath>
     </Reference>
@@ -159,15 +162,29 @@
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Redux\Actions\AppActions.cs" />
     <Compile Include="Redux\Actions\CpmActions.cs" />
+    <Compile Include="Redux\Actions\DbActions.cs" />
+    <Compile Include="Redux\Actions\MockActions.cs" />
+    <Compile Include="Redux\Actions\MqActiions.cs" />
     <Compile Include="Redux\Actions\SysActions.cs" />
     <Compile Include="Redux\Effects\CpmEffects.cs" />
+    <Compile Include="Redux\Effects\DbEffects.cs" />
+    <Compile Include="Redux\Effects\MockEffects.cs" />
+    <Compile Include="Redux\Effects\MqEffects.cs" />
+    <Compile Include="Redux\Effects\SysEffects.cs" />
     <Compile Include="Redux\Models\Cpm.cs" />
+    <Compile Include="Redux\Models\MqSchTask.cs" />
+    <Compile Include="Redux\Models\MqUploadCpms.cs" />
+    <Compile Include="Redux\Models\Sys.cs" />
     <Compile Include="Redux\Patches\StorePro.cs" />
     <Compile Include="Redux\Reducers\AppReducer.cs" />
+    <Compile Include="Redux\Reducers\MqReducer.cs" />
     <Compile Include="Redux\Reducers\SysReducer.cs" />
     <Compile Include="Redux\ReduxIoc.cs" />
     <Compile Include="Redux\Reducers\CpmReducer.cs" />
+    <Compile Include="Redux\Sbuscribers\CpmSubscribers.cs" />
     <Compile Include="Redux\Services\CpmService.cs" />
+    <Compile Include="Redux\Services\MqService.cs" />
+    <Compile Include="Redux\Services\SysService.cs" />
     <Compile Include="ViewModels\DMes\Tab\BaseTab.cs" />
     <Compile Include="ViewModels\DMes\Tab\CpmsTab.cs" />
     <Compile Include="ViewModels\DxWindowViewModel.cs" />
@@ -309,6 +326,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Profiles\Dev\Machines\VD.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Profiles\Assets\Mocks\MqSchTask.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Profiles\Prod\Hmi.Config.json">
