--- a/HmiPro/Profiles/Prod/Hmi.Config.json
+++ b/HmiPro/Profiles/Prod/Hmi.Config.json
@@ -22,7 +22,8 @@
   "UploadWebBoardInterval": 20000,
   //用于接受命令的http端口
   "CmdHttpPort": 8899,
-
+  //息屏间隔
+  "CloseScreenInterval": 900000,
 
   //---------ActiveMq队列和主题---------
   //队列，上传生产属性
