--- a/HmiPro/packages.config
+++ b/HmiPro/packages.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="2.1.1-beta" targetFramework="net461" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
   <package id="DnsClient" version="1.0.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="EntityFramework.zh-Hans" version="6.2.0" targetFramework="net461" />
+  <package id="FluentScheduler" version="5.3.0" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.3.1.953" targetFramework="net461" />
   <package id="MongoDB.Bson" version="2.5.0" targetFramework="net461" />
