--- a/HmiPro/Profiles/Prod/Hmi.Config.json
+++ b/HmiPro/Profiles/Prod/Hmi.Config.json
@@ -48,7 +48,7 @@
 
   //---------¡¨Ω”≈‰÷√---------
   "MongoConn": "mongodb://192.168.88.15:27017",
-  "MqConn": "failover:(tcp://192.168.88.15:61615,tcp://192.168.88.15:61617,tcp://192.168.88.15:61618)?Randomize=false&amp;jms.prefetchPolicy.all=1",
+  "MqConn": "failover:(tcp://192.168.88.15:61615,tcp://192.168.0.15:61615,tcp://192.168.88.15:61617,tcp://192.168.88.15:61618,tcp://192.168.0.15:61617,tcp://192.168.0.15:61618)?Randomize=false&amp;jms.prefetchPolicy.all=1&maxReconnectAttempts=1",
   "MqUserName": "admin",
   "MqUserPwd": "admin",
   "MathRound": 3,
