--- a/YCsharp/YCsharp.csproj
+++ b/YCsharp/YCsharp.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Util\YUtilReflect.cs" />
     <Compile Include="Util\YUtilStream.cs" />
     <Compile Include="Util\YUtilTimer.cs" />
+    <Compile Include="Util\YUtilOs.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -140,7 +141,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_BuildVersioningStyle="None.None.Increment.DeltaBaseDateInDays" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_DetectChanges="False" />
+      <UserProperties BuildVersion_DetectChanges="False" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.Increment.DeltaBaseDateInDays" BuildVersion_StartDate="2000/1/1" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
