--- a/HmiPro/HmiPro.csproj
+++ b/HmiPro/HmiPro.csproj
@@ -173,6 +173,8 @@
     <Compile Include="Helpers\SqliteHelper.cs" />
     <Compile Include="Helpers\ZoomHelper.cs" />
     <Compile Include="Mocks\AlarmMocks.cs" />
+    <Compile Include="Mocks\Mocks.cs" />
+    <Compile Include="Mocks\MqMocks.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Redux\Actions\AlarmActions.cs" />
     <Compile Include="Redux\Actions\AppActions.cs" />
@@ -180,7 +182,7 @@
     <Compile Include="Redux\Actions\DbActions.cs" />
     <Compile Include="Redux\Actions\DMesActions.cs" />
     <Compile Include="Redux\Actions\MockActions.cs" />
-    <Compile Include="Redux\Actions\MqActiions.cs" />
+    <Compile Include="Redux\Actions\MqActions.cs" />
     <Compile Include="Redux\Actions\OeeActions.cs" />
     <Compile Include="Redux\Actions\SysActions.cs" />
     <Compile Include="Redux\Cores\AlarmCore.cs" />
@@ -198,6 +200,7 @@
     <Compile Include="Redux\Models\MachineState.cs" />
     <Compile Include="Redux\Models\MongoDoc.cs" />
     <Compile Include="Redux\Models\MqAlarm.cs" />
+    <Compile Include="Redux\Models\MqRfid.cs" />
     <Compile Include="Redux\Models\MqScanMaterial.cs" />
     <Compile Include="Redux\Models\MqSchTask.cs" />
     <Compile Include="Redux\Models\MqUploadCpms.cs" />
@@ -224,6 +227,7 @@
     <Compile Include="ViewModels\DMes\Tab\AlarmTab.cs" />
     <Compile Include="ViewModels\DMes\Tab\BaseTab.cs" />
     <Compile Include="ViewModels\DMes\Tab\CpmsTab.cs" />
+    <Compile Include="ViewModels\DMes\Tab\ScanMaterialTab.cs" />
     <Compile Include="ViewModels\DMes\Tab\SchTaskTab.cs" />
     <Compile Include="ViewModels\DxWindowViewModel.cs" />
     <Compile Include="ViewModels\Sys\SelectableViewModel.cs" />
@@ -354,6 +358,9 @@
     <None Include="Profiles\Assets\Dicts\工艺Bom.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Profiles\Assets\Mocks\MqScanMaterial.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Profiles\Dev\Hmi.Config.json" />
     <None Include="Profiles\Dev\Machines\CC.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -409,6 +416,12 @@
     <None Include="Profiles\Prod\Hmi.Config.Office.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Profiles\Prod\Machines\CA.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Profiles\Prod\Machines\CB.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Profiles\Prod\Machines\CC.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -427,6 +440,15 @@
     <None Include="Profiles\Prod\Machines\ED.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Profiles\Prod\Machines\EJ.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Profiles\Prod\Machines\EL.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Profiles\Prod\Machines\EP.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Profiles\Prod\Machines\RC_RF.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -439,19 +461,31 @@
     <None Include="Profiles\Prod\Machines\SB.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Profiles\Prod\Machines\SG.xls">
+    <None Include="Profiles\Prod\Machines\SI_SG.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Profiles\Prod\Machines\SI.xls">
+    <None Include="Profiles\Prod\Machines\TA.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Profiles\Prod\Machines\VA.xls">
+    <None Include="Profiles\Prod\Machines\TB_TG.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Profiles\Prod\Machines\VB.xls">
+    <None Include="Profiles\Prod\Machines\VA_VC.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Profiles\Prod\Machines\VB_VG.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Profiles\Prod\Machines\VD.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Profiles\Prod\Machines\VE_VF.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Profiles\Prod\Machines\VH_VI.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Profiles\Prod\Machines\VJ_VK.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Properties\Settings.settings">
@@ -601,7 +635,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_BuildVersioningStyle="None.None.Increment.DeltaBaseDateInDays" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_StartDate="2000/1/1" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_DetectChanges="False" />
+      <UserProperties BuildVersion_DetectChanges="False" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_StartDate="2000/1/1" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.Increment.DeltaBaseDateInDays" />
     </VisualStudio>
   </ProjectExtensions>
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.106.0\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.106.0\build\net46\System.Data.SQLite.Core.targets')" />
