--- a/YCsharp/YCsharp.csproj
+++ b/YCsharp/YCsharp.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Util\YUtil.cs" />
     <Compile Include="Util\YUtilAlgorithm.cs" />
     <Compile Include="Util\YUtilFile.cs" />
+    <Compile Include="Util\YUtilExe.cs" />
     <Compile Include="Util\YUtilReflect.cs" />
     <Compile Include="Util\YUtilStream.cs" />
     <Compile Include="Util\YUtilTimer.cs" />
@@ -141,7 +142,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_DetectChanges="False" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.Increment.DeltaBaseDateInDays" BuildVersion_StartDate="2000/1/1" />
+      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_BuildVersioningStyle="None.None.Increment.DeltaBaseDateInDays" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_DetectChanges="False" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
