--- a/HmiPro/Profiles/Prod/Hmi.Config.Office.json
+++ b/HmiPro/Profiles/Prod/Hmi.Config.Office.json
@@ -57,7 +57,7 @@
   "MathRound": 3,
   //电脑用户名，用于判断是不是在该用户电脑上面运行的该程序
   //方便区分环境
-  "DevUser": "ychost,Somiar",
+  "DevUser": "ychost,somiar",
   "NtpIp": "192.168.0.15",
   "InfluxDbIp": "192.168.0.15",
   "InfluxCpmDbName": "cpm"
